--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -156,6 +156,16 @@ footer.sticky-bottom { border-top: 1px solid #e8e8e8; padding-top: 40px; padding
 
 .projects h2.category { color: #e8e8e8; border-bottom: 1px solid #e8e8e8; padding-top: 0.5rem; margin-top: 2rem; margin-bottom: 1rem; text-align: right; }
 
+.experiences .year { float: right; color: #e8e8e8; }
+.experiences ol.explist { list-style: none; padding: 0; margin-top: 0; }
+.experiences ol.explist li { margin-top: 1rem; border-top: 1px solid #e8e8e8; padding-top: 1rem; box-sizing: border-box; }
+.experiences ol.explist li img { height: 60px; float: left; }
+.experiences ol.explist li .expinfo { height: 60px; display: table-cell; vertical-align: middle; padding-left: 20px; }
+.experiences a { text-decoration: none; }
+.experiences a .expdesc { color: #828282; }
+.experiences a .exptitle { color: black; font-weight: bolder; }
+.experiences a :hover .exptitle { color: #CFB53B; }
+
 .publications { margin-top: 2rem; }
 
 .publications h1 { color: var(--global-theme-color); font-size: 2rem; text-align: center; margin-top: 1em; margin-bottom: 1em; }
